--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anon-dao-chat",
+  "name": "catalyst-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@headlessui/react": "^2.1.6",
+    "@heroicons/react": "^2.1.3",
+    "clsx": "^2.1.1",
+    "discord.js": "^14.14.1",
+    "framer-motion": "^11.2.6",
+    "next": "^14.2.25",
+    "react": "^18",
+    "react-dom": "^18",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/postcss": "^4.0.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "tailwindcss": "^4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "prettier": "^3.3.2",
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "tailwindcss": "^4.0.6",
     "typescript": "^5"
   }
 }
