--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^2.1.6",
     "@heroicons/react": "^2.1.3",
+    "bufferutil": "^4.0.9",
     "clsx": "^2.1.1",
     "discord.js": "^14.14.1",
     "framer-motion": "^11.2.6",
-    "next": "^14.2.25",
+    "next": "^15.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "utf-8-validate": "^6.0.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
