--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-organize-imports": "^4.0.0",
