--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^2.1.6",
     "@heroicons/react": "^2.1.3",
+    "@privy-io/react-auth": "^2.6.4",
     "bufferutil": "^4.0.9",
     "clsx": "^2.1.1",
     "discord.js": "^14.14.1",
+    "ethers": "^6.13.5",
     "framer-motion": "^11.2.6",
     "next": "^15.2.3",
     "react": "^18",
@@ -22,13 +24,16 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@tailwindcss/postcss": "^4.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "hardhat": "^2.22.19",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8",
     "prettier": "^3.3.2",
